--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ html{
     background-color: var(--background-color);
     color: var(--text-color);
 }
+img{
+    width: 100%;
+    height: 100%;
+    overflow: cover;
+}
 a{
     text-decoration: none;
     color: var(--text-color);
@@ -617,6 +622,9 @@ nav{
   }
   .image-container1 h1{
     font-size: 3vw;
+  }
+  .text-ttl{
+    font-size: 1.5rem;
   }
     
 
